# Robotics-ColumbiaX-Project3

./: README.md  kuka_lwr_arm.urdf
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
src/forward_kinematics/: CMakeLists.txt  package.xml
src/forward_kinematics/scripts/: solution.py
src/robot_mover/: CMakeLists.txt
src1/forward_kinematics/: CMakeLists.txt  package.xml
src1/forward_kinematics/scripts/: solution.py
src1/lwr_robot/: CMakeLists.txt  package.xml
src1/robot_mover/: CMakeLists.txt  package.xml
src1/robot_mover/src/: mover.cpp
src1/robot_sim/: CMakeLists.txt  package.xml
src1/robot_sim/config/: rviz.rviz
src1/robot_sim/src/: joint_state_publisher.cpp  position_controller.cpp  robot.cpp  robot_sim_bringup.cpp  velocity_controller.cpp
